fix up spacing and className props in some components

--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -29,6 +29,9 @@
 .pr-1 {
   padding-right: 1rem;
 }
+.pb-1 {
+  padding-bottom: 1rem;
+}
 
 .d-flex {
   display: flex;
